# photXclus

./: .gitignore  .readthedocs.yaml  README.md  THIRD_PARTY_LICENSES.md  mkdocs.yml  pyproject.toml
docs/: index.md  installation.md
docs/api/: data.md  inference.md  likelihood.md  model.md  plotting.md  utils.md
docs/examples/: quickstart.ipynb
photXclus/: __init__.py  data.py  inference.py  likelihood.py  model.py  plotting.py  utils.py
photXclus/pkg_data/: cluscat_example.fits
scripts/: photXclus_params.py  run_oneclus.py  slurm_example.sh
